[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Fonts/chakra_petch.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/NicknameScreen/NicknameScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/SVG/close.svg" type="Texture" id=3]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 1
outline_color = Color( 1, 0.635294, 0.368627, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 40.0
content_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 40.0
bg_color = Color( 0, 0, 0, 0.203922 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.635294, 0.368627, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="NicknameScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Contents" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="Header" type="HBoxContainer" parent="Contents"]
margin_right = 1060.0
margin_bottom = 45.0
size_flags_horizontal = 3
alignment = 1

[node name="CloseButton" type="TextureButton" parent="Contents/Header"]
margin_right = 40.0
margin_bottom = 45.0
mouse_filter = 1
texture_normal = ExtResource( 3 )

[node name="HeaderText" type="Label" parent="Contents/Header"]
margin_left = 44.0
margin_right = 1016.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0.635294, 0.368627, 1 )
custom_fonts/font = SubResource( 8 )
text = "your devices"
align = 1
valign = 1

[node name="NullButton" type="TextureButton" parent="Contents/Header"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1020.0
margin_right = 1060.0
margin_bottom = 45.0
mouse_filter = 1
texture_normal = ExtResource( 3 )

[node name="HeaderMargin" type="Panel" parent="Contents"]
margin_top = 49.0
margin_right = 1060.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 1
custom_styles/panel = SubResource( 11 )

[node name="DeviceListContainer" type="Panel" parent="Contents"]
margin_top = 93.0
margin_right = 1060.0
margin_bottom = 1308.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 9 )

[node name="ScrollContainer" type="ScrollContainer" parent="Contents/DeviceListContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="DeviceList" type="VBoxContainer" parent="Contents/DeviceListContainer/ScrollContainer"]
margin_right = 1060.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="NicknameEntry" type="VBoxContainer" parent="Contents"]
margin_top = 1312.0
margin_right = 1060.0
margin_bottom = 1660.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Contents/NicknameEntry"]
margin_right = 1060.0
margin_bottom = 92.0
custom_colors/font_color = Color( 1, 0.635294, 0.368627, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "set device nickname"
align = 1
valign = 1

[node name="NicknameBox" type="LineEdit" parent="Contents/NicknameEntry"]
margin_top = 96.0
margin_right = 1060.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 3 )
text = "this is a test"
align = 1
caret_blink = true

[node name="Margin" type="Panel" parent="Contents/NicknameEntry"]
margin_top = 200.0
margin_right = 1060.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 30 )
custom_styles/panel = SubResource( 5 )

[node name="SaveButton" type="Label" parent="Contents/NicknameEntry"]
margin_left = 469.0
margin_top = 234.0
margin_right = 591.0
margin_bottom = 314.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 1
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 0.635294, 0.368627, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "SAVE"
align = 1
valign = 1

[node name="Margin2" type="Panel" parent="Contents/NicknameEntry"]
margin_top = 318.0
margin_right = 1060.0
margin_bottom = 348.0
rect_min_size = Vector2( 0, 30 )
custom_styles/panel = SubResource( 5 )

[connection signal="pressed" from="Contents/Header/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="gui_input" from="Contents/NicknameEntry/SaveButton" to="." method="_on_SaveButton_gui_input"]
